# caf-auditor-urgencias-produccion

./: .dockerignore  .env.example  CHANGELOG.md  Dockerfile  docker-compose.yml  email_sender.py  main.py  minio_client.py  pyproject.toml  test_email.py
queries/: get_detalle_atencion.sql
